--- a/ots_cluster_create/tasks/add_credential.yml
+++ b/ots_cluster_create/tasks/add_credential.yml
@@ -30,7 +30,7 @@
       Content-Type: "application/json"
     body: 
       hostname: "{{ item.host_name }}"
-      password: "{{ lookup('template', 'host2pwd.j2') | trim }}"
+      password: "{{ host_esx_password }}"
       type: "host"
       username: "{{ item.host_login }}"
     body_format: json
